# gpu-parallel-patterns

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
benchmarks/: sizes.json
cmake/: cuda_warnings.cmake  sanitizers.cmake
docs/plots/convolution/: convolution_results.md
docs/plots/histogram/: histogram_results.md
docs/plots/merge/: merge_results.md
docs/plots/reduce/: reduce_results.md
docs/plots/scan/: scan_results.md
docs/plots/stencil/: stencil_results.md
include/gpp/: types.hpp
include/gpp/common/: checks.cuh  cli.hpp  compare.hpp  cuda_utils.cuh  rng.hpp  timers.cuh
scripts/: bench.sh  bench_conv.sh  bench_gemm.sh  bench_hist.sh  bench_merge.sh  bench_reduce.sh  bench_scan.sh  bench_sort.sh  bench_stencil.sh  bootstrap_colab.sh  build.sh  gen_conv_results.py  gen_gemm_results.py  gen_hist_results.py  gen_merge_results.py  gen_reduce_results.py  gen_scan_results.py  gen_sort_results.py  gen_stencil_results.py  profile.sh  test.sh
src/: cuda_smoke.cu
src/common/: checks.cu  cli.cpp  rng.cpp  timers.cu
src/patterns/convolution/: README.md  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_const_mem.cu  opt2_tiled.cu  opt3_cached_halo.cu  opt4_separable.cu  test_cpu_ref.cpp
src/patterns/gemm/: README.md  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  cublas_bench.cu  cublas_test.cu  cutlass_bench.cu  cutlass_test.cu  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_tiled.cu
src/patterns/histogram/: README.md  baseline_global_atomics.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_block_shared_hist.cu  opt2_coarsen_contiguous.cu  opt3_coarsen_interleaved.cu  opt4_aggregation.cu
src/patterns/merge/: README.md  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_tiled.cu  opt2_circular_buf.cu
src/patterns/reduce/: README.md  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_contiguous_threads.cu  opt2_coarsened.cu  opt3_warp_shuffle.cu
src/patterns/scan/: README.md  add_block_prefix.cu  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_kogge_stone.cu  opt2_brent_kung.cu  opt3_coarsened.cu  opt4_single_pass.cu
src/patterns/sort/: README.md  baseline_radix.cu  bench.cu  bitonic.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  exclusive_scan_uint.cu  exclusive_scan_uint.cuh  gpu_test.cu  kernels.hpp  opt1_mem_radix.cu  opt2_coarsened_radix.cu
src/patterns/stencil/: README.md  baseline.cu  bench.cu  cpu_bench.cpp  cpu_ref.hpp  cpu_ref_test.cpp  dispatch.cu  gpu_test.cu  kernels.hpp  opt1_shared_halo.cu  opt2_thread_coarsening.cu  opt3_register_tiling.cu  types.hpp
